// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XML Node Parse closing tag with unquoted value ending with // 1`] = `
Object {
  "warning": Array [
    "[xmldom warning]	attribute \\"lazy/\\" missed quot(\\")!
@#[line:3,col:3]",
  ],
}
`;

exports[`XML Node Parse closing tag with unquoted value including /  followed by space / 1`] = `
Object {
  "warning": Array [
    "[xmldom warning]	attribute \\"lazy/\\" missed quot(\\")!!
@#[line:3,col:3]",
  ],
}
`;

exports[`XML Node Parse namespaced attributes unclosed root tag will be closed 1`] = `
Object {
  "actual": "<xml xmlns=\\"1\\" xmlns:a=\\"2\\" a:test=\\"3/\\"/>",
  "warning": Array [
    "[xmldom warning]	unclosed xml attribute
@#[line:1,col:1]",
  ],
}
`;

exports[`XML Node Parse simple attributes should be able to have \`__prototype__\` attribute 1`] = `
Object {
  "actual": "<xml __prototype__=\\"\\"/>",
}
`;

exports[`XML Node Parse simple attributes should be able to have \`constructor\` attribute 1`] = `
Object {
  "actual": "<xml constructor=\\"\\"/>",
}
`;

exports[`XML Node Parse simple attributes unclosed root tag will be closed 1`] = `
Object {
  "actual": "<xml a=\\"1\\" b=\\"2/\\"/>",
  "warning": Array [
    "[xmldom warning]	unclosed xml attribute
@#[line:1,col:1]",
  ],
}
`;
